# Plant

plant-common/: Cargo.toml
plant-common/src/: lib.rs
plant-egui/: .gitignore  Cargo.toml  index.html
plant-egui/assets/: sw.js
plant-egui/src/: app.rs  board.rs  lib.rs  main.rs
plant-egui/src/pages/: home.rs  settings.rs
plant-esp32/: .gitignore  Cargo.toml  partitions.csv  sdkconfig.defaults  wifi.rs.template
plant-esp32/.cargo/: config.toml
plant-esp32/src/: main.rs  plant.rs  plant_db.rs  server.rs
