[package]
name = "plant-esp32"
version = "0.1.0"
authors = ["Doge815 <42283470+Doge815@users.noreply.github.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77.0"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
anyhow = "1"
tokio = { version = "1.37.0", features = ["sync", "rt", "net", "io-util", "time"] }
esp32-gpio-wrapper = { version = "0.3.0" }
ringbuffer = "0.15.0"
plant-common = {path = "../plant-common" }
axum = "0.7.5"
axum-server = "0.6.0"
serde = "1.0.203"
postcard = "1.0.8"

[build-dependencies]
embuild = "0.31.3"
